--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -78,9 +78,17 @@ padding: 10px 0;
   padding-bottom:20px;
 }
 .menu {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+td{
+  padding:0;
+}
+.conteinar {
   display: flex;
-  list-style-type: none;
-  align-items: center;
+  justify-content: center;
 }
 .product-img {
   width:100px;
@@ -91,6 +99,7 @@ padding: 10px 0;
   width: 100%;
   height: 100%;
   object-fit: contain;
+  padding-top: 10px;
 }
 .product{
   margin: 0;
@@ -123,10 +132,6 @@ padding: 10px 0;
   flex-direction: column;
   justify-content: space-between;
 }
-.product-img img {
-  max-width: 100%;
-  height: auto;
-}
 .deta-menu li{
   padding-top:10px;
 }
@@ -139,18 +144,26 @@ padding: 10px 0;
 }
 /* update */
 .back_btn{
-border:solid 2px;
+border:solid 1px;
 color: black;
 text-decoration:none;
 }
 .update-menu li{
   padding-top:10px;
 }
+
 /* auth */
 input[type="submit"],.auth_btn{
   padding: 10px 40px;
   margin: 20px 0;
 }
 .alert ul{
+  list-style: none;
+}
+/* auth */
+.app{
+  text-align: center
+}
+.nav-item{
   list-style: none;
 }
