--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,6 +74,9 @@ padding: 10px 0;
   padding: 0.5rem 0.75rem;
 }
 /* top */
+.sort{
+  width: 50%;
+}
 .search{
   padding-bottom:20px;
 }
@@ -82,6 +85,7 @@ padding: 10px 0;
   padding: 0;
   margin: 0;
   list-style: none;
+  text-align: center;
 }
 td{
   padding:0;
