--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -79,6 +79,9 @@ padding: 10px 0;
   padding: 0.5rem 0.75rem;
 }
 /* top */
+.entry-view{
+  padding-bottom:50px;
+}
 .entry-btn{
   margin-top:50px;
 }
